widen page length select for datatables, fix spacing for issuers nav link (#4766)
widen page length select for datatables, fix spacing for issuers nav item

--- a/app/javascript/css/table.scss
+++ b/app/javascript/css/table.scss
@@ -225,6 +225,9 @@ table {
 .dataTables_length {
   margin-left: $spacer / 2;
   label {font-weight: 400}
+  label > select {
+    padding-right: 1.25em;
+  }
 }
 
 .container:has(#effective_datatable_wrapper) {
